--- a/otonom-surus-teknolojisi.html
+++ b/otonom-surus-teknolojisi.html
@@ -201,7 +201,8 @@
                     <li><strong>GPS ve Haritalar:</strong> Konum belirleme</li>
                 </ul>
             </div>
-            
+           <img src="https://otonom-surus.webp.webp" 
+     alt="Otonom-Surus.webp">
             <h3>Otonom Sürüş Seviyeleri</h3>
             
             <p>Otonom araçlar, <strong>SAE International</strong> tarafından belirlenen 6 seviyeye göre sınıflandırılır:</p>
