--- a/akilli-sehirler-baglantili-araclar.html
+++ b/akilli-sehirler-baglantili-araclar.html
@@ -482,6 +482,10 @@
                 <div class="challenge-item">
                     <h4>⚠️ Siber Güvenlik</h4>
                     <p><strong>Problem:</strong> Bağlantılı araçlar hacker saldırısına açık.</p>
+					<p><strong>Problem:</strong> Bağlantılı araçlar hacker saldırısına açık.</p>
+<p><strong>Çözüm:</strong> Blockchain teknolojisi, end-to-end şifreleme, çok katmanlı güvenlik protokolleri.</p>
+</div>
+
 					   <div class="challenge-item">
                 <h4>⚠️ Altyapı Maliyeti</h4>
                 <p><strong>Problem:</strong> Akıllı şehir altyapısı milyarlarca dolar yatırım gerektiriyor.</p>
