--- a/akilli-sehirler-baglantili-araclar.html
+++ b/akilli-sehirler-baglantili-araclar.html
@@ -482,9 +482,8 @@
                 <div class="challenge-item">
                     <h4>⚠️ Siber Güvenlik</h4>
                     <p><strong>Problem:</strong> Bağlantılı araçlar hacker saldırısına açık.</p>
-					<p><strong>Problem:</strong> Bağlantılı araçlar hacker saldırısına açık.</p>
-<p><strong>Çözüm:</strong> Blockchain teknolojisi, end-to-end şifreleme, çok katmanlı güvenlik protokolleri.</p>
-</div>
+                 <p><strong>Çözüm:</strong> Blockchain teknolojisi, end-to-end şifreleme, çok katmanlı güvenlik protokolleri.              </p>
+              </div>
 
 					   <div class="challenge-item">
                 <h4>⚠️ Altyapı Maliyeti</h4>
@@ -613,16 +612,17 @@
                 <h3>Elektrikli Araç Bataryaları</h3>
                 <p>2026 ve sonrası batarya teknolojileri...</p>
                 <a href="elektrikli-arac-bataryalari-gelecek.html" class="btn">Devamını Oku</a>
-            </article>
             <article class="card">
                 <div class="card-image">🎮</div>
                 <h3>Araç İçi Eğlence Sistemleri</h3>
                 <p>5G, bulut oyunculuğu ve mobil eğlence dünyası...</p>
                 <a href="yolculukta-mobil-oyun-dunyasi.html" class="btn">Devamını Oku</a>
             </article>
-        </div>
+        </div></div>
     </section>
+	</article>
 </main>
+
 <footer>
     <div class="container">
         <p>&copy; 2025 Atasayar Oto. Tüm hakları saklıdır.</p>
@@ -630,3 +630,4 @@
     </div>
 </footer>
 </body>
+</html>
