--- a/akilli-sehirler-baglantili-araclar.html
+++ b/akilli-sehirler-baglantili-araclar.html
@@ -280,6 +280,13 @@
             <div class="highlight-box">
                 <h3>📊 2025 Yılı Akıllı Şehir İstatistikleri</h3>
                 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1.5rem; margin-top: 1.5rem;">
+					            <h1>Akıllı Şehirler ve Bağlantılı Araçlar: Sürüş Deneyimi Nasıl Değişiyor?</h1>
+
+            <img src="akilli-sehir-baglantili-arac.jpg" alt="Akıllı Şehirler ve Bağlantılı Araçlar - Gelecek Teknolojisi" class="hero-image">
+
+            <p><strong>Şehirler akıllanıyor, araçlar birbirleriyle konuşuyor.</strong> Bu artık bilim kurgu değil, 2024 yılının gerçeği. Akıllı şehir altyapısı ve bağlantılı araç teknolojileri, sürüş deneyimini kökten değiştiriyor. V2X (Vehicle-to-Everything) iletişimi, 5G bağlantı, yapay zeka ve IoT (Internet of Things) sayesinde, araçlarımız artık çevresiyle sürekli iletişim halinde.</p>
+            
+            <p>Peki, bu teknolojiler günlük hayatımızı nasıl etkiliyor? Trafik sıkışıklığı gerçekten azalacak mı? Park yeri bulmak kolaylaşacak mı? <strong>Geleceğin şehirlerinde sürüş deneyimi nasıl olacak?</strong></p>
                     <div class="stat-box">
                         <span class="stat-number">500+</span>
                         <span class="stat-label">Akıllı şehir projesi</span>
