--- a/akilli-sehirler-baglantili-araclar.html
+++ b/akilli-sehirler-baglantili-araclar.html
@@ -279,8 +279,8 @@
             
             <div class="article-date">📅 19 Aralık 2025 | ⏱️ 13 dakika okuma | 🌆 Gelecek Teknolojileri</div>
 			<h1>Akıllı Şehirler ve Bağlantılı Araçlar: Sürüş Deneyimi Nasıl Değişiyor?</h1>
-            <img src="akilli-sehir-baglantili-arac.jpg" alt="Akıllı Şehirler ve Bağlantılı Araçlar - Gelecek Teknolojisi" class="hero-image">
-			 <p><strong>Şehirler akıllanıyor, araçlar birbirleriyle konuşuyor.</strong> Bu artık bilim kurgu değil, 2024 yılının gerçeği. Akıllı şehir altyapısı ve bağlantılı araç teknolojileri, sürüş deneyimini kökten değiştiriyor. V2X (Vehicle-to-Everything) iletişimi, 5G bağlantı, yapay zeka ve IoT (Internet of Things) sayesinde, araçlarımız artık çevresiyle sürekli iletişim halinde.</p>
+            <img src="akilli-sehir-baglantili-arac.webp" alt="Akıllı Şehirler ve Bağlantılı Araçlar - Gelecek Teknolojisi" class="hero-image">
+			 <p><strong>Şehirler akıllanıyor, araçlar birbirleriyle konuşuyor.</strong> Bu artık bilim kurgu değil, 2025 yılının gerçeği. Akıllı şehir altyapısı ve bağlantılı araç teknolojileri, sürüş deneyimini kökten değiştiriyor. V2X (Vehicle-to-Everything) iletişimi, 5G bağlantı, yapay zeka ve IoT (Internet of Things) sayesinde, araçlarımız artık çevresiyle sürekli iletişim halinde.</p>
 
             <div class="highlight-box">
                 <h3>📊 2025 Yılı Akıllı Şehir İstatistikleri</h3>
